# Local-Deployments

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/adapters/: iadapter.py  mock_adapter.py  pve_adapter.py
backend/app/api/: routes.py
backend/app/core/: graph_engine.py  state_manager.py
backend/app/models/: schemas.py
backend/tests/: cleanup.py  conftest.py
backend/tests/integration/: test_pve_adapter.py
backend/tests/unit/: test_graph_engine.py  test_routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
